--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -134,9 +134,11 @@ EOF
 FROM cpu-base AS pyarrow-builder
 
 ARG TARGETARCH
+ARG DATASCIENCE_SOURCE_CODE=jupyter/datascience/ubi9-python-3.12
 # hadolint ignore=DL3002
 USER 0
 WORKDIR /tmp/build-wheels
+COPY ${DATASCIENCE_SOURCE_CODE}/apache-arrow-48430.patch /tmp/build-wheels/
 
 # Build pyarrow on ppc64le and s390x
 RUN --mount=type=cache,target=/root/.cache/pip \
@@ -145,7 +147,7 @@ set -Eeuxo pipefail
 if [ "$TARGETARCH" = "ppc64le" ] || [ "$TARGETARCH" = "s390x" ]; then
     # Install build dependencies (shared for pyarrow and onnx)
     packages=(
-        cmake make gcc-c++ pybind11-devel wget
+        cmake make gcc-c++ pybind11-devel wget patch
         # pyarrow -DARROW_S3=ON pulls in AWS C++ SDK
         # libcurl-devel is required to build AWS C++ SDK
         libcurl-devel openssl-devel
@@ -153,8 +155,11 @@ if [ "$TARGETARCH" = "ppc64le" ] || [ "$TARGETARCH" = "s390x" ]; then
     dnf install -y "${packages[@]}"
     dnf clean all
     # Build and collect pyarrow wheel
-    git clone --depth 1 --branch "apache-arrow-17.0.0" https://github.com/apache/arrow.git
-    cd arrow/cpp
+    git clone --depth 1 --branch "apache-arrow-21.0.0" https://github.com/apache/arrow.git
+    cd arrow
+    git apply /tmp/build-wheels/apache-arrow-48430.patch
+    rm -rf .git
+    cd cpp
     mkdir release && cd release
     ARROW_S3_FLAG=""
     if [ "$TARGETARCH" != "s390x" ]; then ARROW_S3_FLAG="-DARROW_S3=ON"; fi
@@ -221,7 +226,7 @@ EOF
 #######################################################
 FROM common-builder AS onnx-builder
 ARG TARGETARCH
-ARG ONNX_VERSION=v1.19.0
+ARG ONNX_VERSION=v1.20.0
 WORKDIR /root
 RUN <<'EOF'
 set -Eeuxo pipefail
