--- a/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -87,8 +87,8 @@ if [ "$TARGETARCH" = "ppc64le" ]; then cat > /etc/profile.d/ppc64le.sh <<'PROFIL
 export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig/
 export LD_LIBRARY_PATH=/usr/local/lib64:/usr/local/lib:/usr/lib64:/usr/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
 export OPENBLAS_VERSION=0.3.30
-export ONNX_VERSION=1.19.0
-export PYARROW_VERSION=17.0.0
+export ONNX_VERSION=1.20.0
+export PYARROW_VERSION=21.0.0
 export PATH="$HOME/.cargo/bin:$PATH"
 export GRPC_PYTHON_BUILD_SYSTEM_OPENSSL=1
 PROFILE_EOF
@@ -151,15 +151,19 @@ EOF
 FROM cpu-base AS s390x-builder
 
 ARG TARGETARCH
+ARG DATASCIENCE_SOURCE_CODE=runtimes/datascience/ubi9-python-3.12
 # hadolint ignore=DL3002
 USER 0
 WORKDIR /tmp/build-wheels
+
+# Bring in the Arrow patch to apply on the source checkout
+COPY ${DATASCIENCE_SOURCE_CODE}/apache-arrow-48430.patch /tmp/build-wheels/apache-arrow-48430.patch
 
 # Set pyarrow version for s390x
 RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
 if [ "$TARGETARCH" = "s390x" ]; then
-    echo 'export PYARROW_VERSION=17.0.0' >> /etc/profile.d/s390x.sh
+    echo 'export PYARROW_VERSION=21.0.0' >> /etc/profile.d/s390x.sh
 fi
 EOF
 
@@ -178,6 +182,9 @@ if [ "$TARGETARCH" = "s390x" ]; then
     # Clone specific version of arrow
     git clone -b apache-arrow-${PYARROW_VERSION} https://github.com/apache/arrow.git
     cd arrow
+    rm -rf .git
+    # Apply downstream patch before building (do not tolerate already-applied)
+    patch -p1 < ../apache-arrow-48430.patch
     # Set environment variables for build
     export ARROW_HOME=/usr/local
     export LD_LIBRARY_PATH=/usr/local/lib64:/usr/local/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
@@ -269,7 +276,7 @@ USER root
 WORKDIR /root
 
 ARG TARGETARCH
-ENV ONNX_VERSION=1.19.0
+ENV ONNX_VERSION=1.20.0
 
 RUN echo "onnx-builder stage TARGETARCH: ${TARGETARCH}"
 
@@ -300,7 +307,11 @@ USER root
 WORKDIR /root
 
 ARG TARGETARCH
-ENV PYARROW_VERSION=17.0.0
+ARG DATASCIENCE_SOURCE_CODE=runtimes/datascience/ubi9-python-3.12
+ENV PYARROW_VERSION=21.0.0
+
+# Bring in the Arrow patch to apply on the source checkout
+COPY ${DATASCIENCE_SOURCE_CODE}/apache-arrow-48430.patch /root/apache-arrow-48430.patch
 
 RUN echo "arrow-builder stage TARGETARCH: ${TARGETARCH}"
 
@@ -308,7 +319,10 @@ RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
 if [ "$TARGETARCH" = "ppc64le" ]; then
     git clone -b apache-arrow-${PYARROW_VERSION} https://github.com/apache/arrow.git --recursive
-    cd arrow && rm -rf .git && mkdir dist
+    cd arrow
+    # Apply downstream patch before building (do not tolerate already-applied)
+    git apply ../apache-arrow-48430.patch
+    rm -rf .git && mkdir dist
     pip3 install --no-cache-dir -r python/requirements-build.txt
     ARROW_HOME=$(pwd)/dist
     export ARROW_HOME
