NO-JIRA: chore(Dockerfile.konflux.cpu): clean up DNF cache after installing build dependencies
```
Starting Hadolint
./codeserver/ubi9-python-3.12/Dockerfile.konflux.cpu:43 DL3040 warning: `dnf clean all` missing after dnf command.
Error: Process completed with exit code 123.
```

--- a/codeserver/ubi9-python-3.12/Dockerfile.konflux.cpu
+++ b/codeserver/ubi9-python-3.12/Dockerfile.konflux.cpu
@@ -40,7 +40,9 @@ EOF
 ### END Subscribe with subscription manager
 
 # install build dependencies
-RUN dnf install -y jq patch libtool rsync gettext gcc-toolset-14 krb5-devel libX11-devel libatomic gcc-toolset-14-libatomic-devel
+RUN dnf install -y \
+    jq patch libtool rsync gettext gcc-toolset-14 krb5-devel libX11-devel libatomic gcc-toolset-14-libatomic-devel && \
+  dnf clean all
 
 # Build code-server rpm
 RUN ./get_code_server_rpm.sh
