NO-JIRA: chore(Dockerfile.konflux.cpu): apply Arrow downstream patch for s390x and ppc64le builds
```
+ ./scripts/check_dockerfile_alignment.sh
Scanning ./jupyter ./codeserver ./runtimes for directories containing Dockerfile.konflux.*
Comparing Dockerfiles, ignoring comments and LABEL blocks...
```

--- a/runtimes/datascience/ubi9-python-3.12/Dockerfile.konflux.cpu
+++ b/runtimes/datascience/ubi9-python-3.12/Dockerfile.konflux.cpu
@@ -155,9 +155,13 @@ EOF
 FROM cpu-base AS s390x-builder
 
 ARG TARGETARCH
+ARG DATASCIENCE_SOURCE_CODE=runtimes/datascience/ubi9-python-3.12
 # hadolint ignore=DL3002
 USER 0
 WORKDIR /tmp/build-wheels
+
+# Bring in the Arrow patch to apply on the source checkout
+COPY ${DATASCIENCE_SOURCE_CODE}/apache-arrow-48430.patch /tmp/build-wheels/apache-arrow-48430.patch
 
 # Set pyarrow version for s390x
 RUN /bin/bash <<'EOF'
@@ -182,6 +186,9 @@ if [ "$TARGETARCH" = "s390x" ]; then
     # Clone specific version of arrow
     git clone -b apache-arrow-${PYARROW_VERSION} https://github.com/apache/arrow.git
     cd arrow
+    rm -rf .git
+    # Apply downstream patch before building (do not tolerate already-applied)
+    patch -p1 < ../apache-arrow-48430.patch
     # Set environment variables for build
     export ARROW_HOME=/usr/local
     export LD_LIBRARY_PATH=/usr/local/lib64:/usr/local/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
@@ -304,7 +311,11 @@ USER root
 WORKDIR /root
 
 ARG TARGETARCH
+ARG DATASCIENCE_SOURCE_CODE=runtimes/datascience/ubi9-python-3.12
 ENV PYARROW_VERSION=21.0.0
+
+# Bring in the Arrow patch to apply on the source checkout
+COPY ${DATASCIENCE_SOURCE_CODE}/apache-arrow-48430.patch /root/apache-arrow-48430.patch
 
 RUN echo "arrow-builder stage TARGETARCH: ${TARGETARCH}"
 
@@ -312,7 +323,10 @@ RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
 if [ "$TARGETARCH" = "ppc64le" ]; then
     git clone -b apache-arrow-${PYARROW_VERSION} https://github.com/apache/arrow.git --recursive
-    cd arrow && rm -rf .git && mkdir dist
+    cd arrow
+    # Apply downstream patch before building (do not tolerate already-applied)
+    git apply ../apache-arrow-48430.patch
+    rm -rf .git && mkdir dist
     pip3 install --no-cache-dir -r python/requirements-build.txt
     ARROW_HOME=$(pwd)/dist
     export ARROW_HOME
