NO-JIRA: chore(Dockerfile.konflux.cpu): apply Arrow downstream patch for s390x and ppc64le builds
```
+ cd arrow
+ rm -rf .git
+ patch -p1
/bin/bash: line 15: patch: command not found
subprocess exited with status 127
```

--- a/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -179,7 +179,7 @@ if [ "$TARGETARCH" = "s390x" ]; then
     # Install build dependencies
     dnf install -y cmake make gcc-c++ pybind11-devel wget git \
         openssl-devel zlib-devel bzip2-devel lz4-devel \
-        ninja-build
+        ninja-build patch
     dnf clean all
     # Source the environment variables
     source /etc/profile.d/s390x.sh
