--- a/rstudio/c9s-python-3.12/build-args/konflux.cuda.conf
+++ b/rstudio/c9s-python-3.12/build-args/konflux.cuda.conf
@@ -1,1 +1,1 @@
-BASE_IMAGE=quay.io/opendatahub/odh-base-image-cuda-py312-c9s:v12.8
+BASE_IMAGE=registry.redhat.io/rhai/base-image-cuda-rhel9:3.2.0-1765367347
