--- a/runtimes/rocm-pytorch/ubi9-python-3.12/build-args/konflux.rocm.conf
+++ b/runtimes/rocm-pytorch/ubi9-python-3.12/build-args/konflux.rocm.conf
@@ -2,4 +2,4 @@
 # ROCm Version : 6.3.4
 # Architectures: linux/x86_64
 # Source       : https://quay.io/repository/aipcc/base-images/rocm
-BASE_IMAGE=quay.io/aipcc/base-images/rocm:3.0-1755080929
+BASE_IMAGE=registry.redhat.io/rhai/base-image-rocm-rhel9:3.2.0-1764877298
