--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -32,7 +32,10 @@ name: Build & Publish Notebook Servers (TEMPLATE)
 jobs:
   build:
     # https://docs.github.com/en/actions/how-tos/using-github-hosted-runners/using-github-hosted-runners/about-github-hosted-runners#standard-github-hosted-runners-for-public-repositories
-    runs-on: ${{ inputs.platform == 'linux/arm64' && 'ubuntu-24.04-arm' || 'ubuntu-24.04' }}
+    runs-on: >-
+      ${{ fromJSON(
+        '{"linux/amd64": "ubuntu-24.04", "linux/arm64": "ubuntu-24.04-arm", "linux/ppc64le": "ubuntu-24.04-ppc64le", "linux/s390x": "ubuntu-24.04-s390x"}'
+      )[inputs.platform] || 'no-such-runner' }}
     env:
       # Some pieces of code (image pulls, for example) in podman consult TMPDIR or default to /var/tmp
       TMPDIR: /home/runner/.local/share/containers/tmpdir
