Revert "fixup remove unused rstudio SECRET_DIR arguments (#2686)"
This reverts commit 0cb26d1c054caeff7bfaf9734737724cda43c223.

--- a/rstudio/rhel9-python-3.12/Dockerfile.cpu
+++ b/rstudio/rhel9-python-3.12/Dockerfile.cpu
@@ -66,6 +66,13 @@ ARG TARGETARCH
 
 WORKDIR /opt/app-root/bin
 
+# TODO THIS SHOULD BE REMOVED
+# Access the client's secret for the subscription manager from the environment variable
+ARG SECRET_DIR=/opt/app-root/src/.sec
+ARG SERVERURL_DEFAULT=""
+ARG BASEURL_DEFAULT=""
+# TILL HERE
+
 LABEL name="odh-notebook-rstudio-server-rhel9-python-3.12" \
       summary="RStudio Server image with python 3.12 based on Red Hat Enterprise Linux 9" \
       description="RStudio Server image with python 3.12 based on Red Hat Enterprise Linux 9" \
