RHAIENG-2367: update `BASE_IMAGE` reference in CUDA and RStudio buildconfigs to latest RHEL 9 Python 3.12 image

--- a/manifests/base/cuda-rstudio-buildconfig.yaml
+++ b/manifests/base/cuda-rstudio-buildconfig.yaml
@@ -49,7 +49,7 @@ spec:
       dockerfilePath: "rstudio/rhel9-python-3.12/Dockerfile.cuda"
       buildArgs:
         - name: BASE_IMAGE
-          value: quay.io/opendatahub/odh-base-image-cuda-py312-ubi9:v12.8
+          value: "registry.redhat.io/rhel9/python-312:latest"
       noCache: true
       volumes:
         - name: secret-mvn
