--- a/manifests/base/rstudio-buildconfig.yaml
+++ b/manifests/base/rstudio-buildconfig.yaml
@@ -46,7 +46,7 @@ spec:
       dockerfilePath: "rstudio/rhel9-python-3.12/Dockerfile.cpu"
       buildArgs:
         - name: BASE_IMAGE
-          value: registry.redhat.io/rhel9/python-312:latest
+          value: "registry.redhat.io/rhel9/python-312:latest"
       volumes:
         - name: secret-mvn
           source:
