RHAIENG-2367: update `BASE_IMAGE` reference in CUDA and RStudio buildconfigs to latest RHEL 9 Python 3.12 image
RHAIENG-2430: fix(RStudio/Dockerfile): add the CUDA building part so that we don't depend on odh-io base-image

--- a/manifests/base/cuda-rstudio-buildconfig.yaml
+++ b/manifests/base/cuda-rstudio-buildconfig.yaml
@@ -47,6 +47,9 @@ spec:
     type: Docker
     dockerStrategy:
       dockerfilePath: "rstudio/rhel9-python-3.12/Dockerfile.cuda"
+      buildArgs:
+        - name: BASE_IMAGE
+          value: "registry.redhat.io/rhel9/python-312:latest"
       noCache: true
       volumes:
         - name: secret-mvn
