--- a/rstudio/rhel9-python-3.12/build-args/cpu.conf
+++ b/rstudio/rhel9-python-3.12/build-args/cpu.conf
@@ -1,3 +1,3 @@
-# Base Image   : CentOS Stream 9 with Python 3.12
+# Base Image   : RHEL 9 with Python 3.12
 # Architectures: linux/arm64, linux/x86_64
-BASE_IMAGE=quay.io/opendatahub/odh-base-image-cpu-py312-c9s:latest
+BASE_IMAGE=registry.redhat.io/rhel9/python-312:latest
