--- a/rstudio/rhel9-python-3.12/build-args/cuda.conf
+++ b/rstudio/rhel9-python-3.12/build-args/cuda.conf
@@ -1,4 +1,3 @@
-# Base Image   : CentOS Stream 9 with Python 3.12
-# CUDA Version : 12.8.1
+# Base Image   : RHEL 9 with Python 3.12
 # Architectures: linux/arm64, linux/x86_64
-BASE_IMAGE=quay.io/opendatahub/odh-base-image-cuda-py312-c9s:v12.8
+BASE_IMAGE=registry.redhat.io/rhel9/python-312:latest
