reapply RHOAIENG-32541: fix(subscription): remove `subscription-manager.*register` from Dockerfiles to have Konflux do it for us (#2686)

--- a/rstudio/rhel9-python-3.12/Dockerfile.cpu
+++ b/rstudio/rhel9-python-3.12/Dockerfile.cpu
@@ -27,7 +27,7 @@ USER root
 # If we have a Red Hat subscription prepared, refresh it
 RUN set -Eeuxo pipefail && \
     if command -v subscription-manager &> /dev/null; then \
-        subscription-manager identity &>/dev/null && subscription-manager refresh || echo "Not registered, skipping refresh."; \
+        subscription-manager identity &>/dev/null && subscription-manager refresh || echo "No identity, skipping refresh."; \
     fi
 
 # Problem: The operation would result in removing the following protected packages: systemd
