RHAIENG-2460: Update compute resources to better perform the build and scanning
First changing from x86_64 to amd4, then resolving the resource issues by stepping to the larger size, to avoid OOM. Also update compute resource for clair-scan and ecosystem-cert-preflight-checks

--- a/.tekton/multiarch-push-pipeline.yaml
+++ b/.tekton/multiarch-push-pipeline.yaml
@@ -112,7 +112,7 @@ spec:
     name: privileged-nested
     type: string
   - default:
-    - linux/x86_64
+    - linux-mxlarge/amd64
     description: List of platforms to build the container images on. The available set of values is determined by the configuration of the multi-platform-controller.
     name: build-platforms
     type: array
