--- a/.tekton/odh-base-image-cpu-py312-c9s-push.yaml
+++ b/.tekton/odh-base-image-cpu-py312-c9s-push.yaml
@@ -34,7 +34,7 @@ spec:
     - latest
   - name: build-platforms
     value:
-    - linux/x86_64
+    - linux-mxlarge/amd64
     - linux/arm64
     - linux/ppc64le
     - linux/s390x
