--- a/.tekton/odh-workbench-rstudio-minimal-cpu-py312-rhel9-pull-request.yaml
+++ b/.tekton/odh-workbench-rstudio-minimal-cpu-py312-rhel9-pull-request.yaml
@@ -25,7 +25,7 @@ metadata:
   namespace: open-data-hub-tenant
 spec:
   timeouts:
-    pipeline: 3h
+    pipeline: 6h
   params:
   - name: git-url
     value: '{{source_url}}'
@@ -37,7 +37,7 @@ spec:
     value: 5d
   - name: build-platforms
     value:
-    - linux/x86_64
+    - linux-mxlarge/amd64
   - name: dockerfile
     value: rstudio/rhel9-python-3.12/Dockerfile.cpu
   - name: path-context
